--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@
 }
 
 
+
 *{
     box-sizing:border-box;
     margin:0;
@@ -33,6 +34,10 @@ header .logo{
     height: 50px;
 }
 
+.nav-descktop{
+    display: none;
+}
+
 /* section-one */
 
 .section-one {
@@ -41,7 +46,7 @@ header .logo{
 }
 .section-one--container {
     width: 100%;
-    max-width: 980px;
+    max-width: 1100px;
     padding: 1rem;
     margin: 0 auto;
     display: flex;
@@ -75,18 +80,17 @@ header .logo{
 }
 .section-one--picture img{
     width: 100%;
-    max-width: 550px;
     margin: 0 auto;
     padding-block: 3rem;
 }
 .section-one--form{
     padding: 1rem;
-    max-width: 850px;
+    max-width: 1150px;
     margin: 0 auto;
 }
 .section-one--form form {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    display: flex;
+    flex-direction: column;
     padding: 1.5rem;
     background-color: var(--color--two);
     border-radius: 0.5rem;
@@ -133,7 +137,7 @@ header .logo{
 }
 .section-two--container {
     margin: 0 auto;
-    max-width: 980px;
+    max-width: 1100px;
     padding: 1rem;
 }
 .section-two--container .what-we-do{
@@ -196,19 +200,17 @@ header .logo{
 }
 .section-three--container {
     margin: 0 auto;
-    max-width: 980px;
+    max-width: 1100px;
     width: 100%;
     padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
 }
 .section-three--container picture img{
     width: 100%;
     max-width: 600px;
 }
-.section-three--paragraf {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
+
 .section-three--paragraf h2{
     margin-top: 2rem;
     font-family: var(--font-DM-sanz);
@@ -223,7 +225,7 @@ header .logo{
     font-size: 1.2rem;
     font-family: var(--font-inter);
 }
-.section-three--paragraf button{
+.section-three .section-three--paragraf button{
     padding: .7rem;
     background-color: var(--color--four);
     border: none;
@@ -231,6 +233,7 @@ header .logo{
     font-size: 1rem;
     font-family: var(--font-DM-sanz);
     margin-top: .8rem;
+    color: var(--color-text-alternative);
 }
 
 /* section-four */
@@ -244,7 +247,7 @@ header .logo{
 .section-four--container {
     margin: 0 auto;
     padding: 1rem;
-    max-width: 980px;
+    max-width: 1100px;
 }
 .section-four--container h3{
     font-size: .8rem;
@@ -417,7 +420,7 @@ header .logo{
     gap: .5rem;
 }
 .section-six--feedback div h4{
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-family: var(--font-inter);
     font-weight: 500;
 }
@@ -441,4 +444,85 @@ header .logo{
     height:auto;
     border-radius: 0.7rem;
     box-shadow: 0 4px 8px rgba(89,73,30,0.16);
+}
+
+
+/* footer */
+
+.section-six--footer{
+    width: 100%;
+    position: relative;
+    background-color: var(--color-white-off);
+    padding: 1.5rem 2rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    font-family: var(--font-DM-sanz);
+}
+
+.section-six--footer .section-six--redes{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-white-on);
+    width: 60%;
+    border-top: 5px solid var(--color--two);
+    position: relative;
+    top: -4rem;
+    max-width: 190px;
+}
+.section-six--footer .section-six--redes img{
+    width: 100px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 2.2rem;
+    margin-bottom: 2rem;
+    cursor: pointer;
+}
+
+.section-six--footer .section-six--container{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 2rem;
+}
+.section-six--container article h3{
+    font-size: 1.2rem;
+    color: var(--color-azul-off);
+    font-weight: bold;
+    margin-bottom: 0.7rem;
+}
+.section-six--container article p{
+    color: #898989;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+.section-six .footer-two{
+    background-color: var(--color-text-alternative);
+    width: 100%;
+    font-size: 0.7rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    color: var(--color-white-off);
+    padding: 0.7rem;
+    font-family: var(--font-inter);
+}
+/* menu de categorias */
+
+.categories--programs {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.name--category {
+    font-family: var(--fuente-poppins);
+    font-size: 1.1rem;
+    background-color: var(--color-white-off);
+    color: #282623;
+    font-weight: bold;
+    text-align: center;
+    padding: 1.2rem;
+    border-radius: .7rem;
+    text-transform: capitalize;
+    cursor: pointer;
 }
