--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,9 @@ header{
     justify-content: space-between;
     background-color: var(--color--one);
     padding: 1rem .5rem;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 header .logo{
@@ -42,6 +45,7 @@ header .logo{
 .section-one {
     width: 100%;
     background-color: var(--color-white-off);
+    padding-top: 5rem;
 }
 .section-one--container {
     width: 100%;
@@ -562,7 +566,7 @@ header .logo{
     left: 0;
     backdrop-filter: blur(4px);
     background-color:rgba(255,255,255,0.3);
-    z-index: 1;
+    z-index: 2;
     display:none;
     align-items: center;
     justify-items: center;
