--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -91,5 +91,141 @@
     gap: 2rem;
     margin-top: 1rem;
     align-items: center;
-
 }
+
+/* section-about-me--container */
+
+.section-about-services {
+    width: 100%;
+}
+.section-about-services--container {
+    margin: 0 auto;
+    padding: 1rem;
+    max-width: 1200px;
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 1rem;
+}
+.section-info--garanties {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    text-align: center;
+    background-color: #f5fbff;
+    padding: 1rem;
+    border-radius: .5rem;
+    box-shadow: 5px 5px 15px 0px rgb(29, 29, 29,0.1);
+}
+.section-info--garanties img{
+    display: inline-block;
+    padding: .7rem;
+    background-color: var(--color-white-on);
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: .5rem;
+    transition: .3s;
+}
+.section-info--garanties:hover img{
+    background-color: var(--color--four);
+    transition: .3s;
+}
+.section-info--garanties h3{
+    color: var(--color--one);
+    font-family:var(--font-inter);
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-block:.5rem;
+}
+.section-info--garanties p{
+    font-family: var(--font-DM-sanz);
+    font-size: 1rem;
+    color: var(--color-text-alternative);
+}
+
+/* section-galery */
+
+.section-galery {
+    width:100%;
+}
+.section-galery--content {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    padding: 1rem;
+}
+.section-galery--pictures {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    gap: 1rem;
+}
+.section-galery--pictures img{
+    border-radius: .5rem;
+}
+.section-galery--pictures img:nth-child(1){
+    width: 100%;
+    max-width: 300px;
+    grid-area: 1 / 1 / 3 / 4;
+}
+.section-galery--pictures img:nth-child(2){
+    width: 100%;
+    max-width: 300px;
+    grid-area: 3 / 1 / 6 / 4; 
+}
+.section-galery--pictures img:nth-child(3){
+    width: 100%;
+    max-width: 300px;
+    grid-area: 2 / 4 / 4 / 6
+}
+.section-galery--pictures img:nth-child(4){
+    width: 100%;
+    max-width: 300px;
+    grid-area: 4 / 4 / 6 / 6;
+}
+.section-galer--info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.section-galer--info h3{
+    background-color: #FFF5CB;
+    padding: 1rem;
+    font-family: var(--font-DM-sanz);
+    font-size: .7rem;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: .7rem;
+    border-left: 3px solid var(--color--four);
+    text-transform: capitalize;
+}
+.section-galer--info h2{
+    font-family: var(--font-inter);
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--color-text-alternative);
+    line-height: 2.5rem;
+}
+.section-galer--info h2 span{   
+    color: var(--color--one);
+}
+.section-galer--info div{
+    display: inline-block;
+    width: 80px;
+    height: 5px;
+    background-color: var(--color--two);
+}
+.section-galer--info p{
+    font-size: 1.2rem;
+    font-family: var(--font-inter);
+    color: var(--color-text-alternative);
+    font-weight: 400;
+}
+
+
