--- a/css/deckstop.css
+++ b/css/deckstop.css
@@ -46,3 +46,12 @@ header{
     z-index: 2;
     top: 1.5rem;
 }
+.section-about-services--container {
+    grid-template-columns: repeat(4,1fr);
+}
+.section-info--garanties h3{
+    font-size: 1rem;
+}
+.section-about--container div{
+    height: 250px;
+}
