actualización del diseño web ya estamos en un 98%

--- a/css/deckstop.css
+++ b/css/deckstop.css
@@ -63,3 +63,9 @@ header{
 .section-galer--info button{
     width:40% ;
 }
+#icon-menu{
+    display: none;
+}
+.nav-descktop{
+    display: flex;
+}
