--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -240,5 +240,66 @@
     border-radius: .7rem;
     cursor: pointer;
 }
-
-
+.Qukies{
+    cursor: pointer;
+}
+.Qukies:hover{
+    color: var(--color-text-alternative);
+}
+.mobile-menu{
+    position: relative;
+    display: none;
+}
+.menu-mobile{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    position: fixed;
+    z-index: 300;
+    backdrop-filter: blur(4px);
+    background-color:rgba(255,255,255,0.3);
+} 
+.menu-mobile--content{
+    height: 100vh;
+    background-color: var(--color-white-on);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    position: fixed;
+    margin: 0 auto;
+    width: 200px;
+    align-items: center;
+    justify-content: center;
+}
+.menu-mobile-icon{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+.menu-mobile--content nav{
+    position: relative;
+}
+.menu-mobile--content nav ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.menu-mobile--content nav ul li{
+    font-family: var(--font-DM-sanz);
+    text-transform: capitalizea;
+    padding: .7rem;
+    right: 0;
+    text-transform: capitalize;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+.menu-mobile--content nav ul li span{
+    display: inline-block;
+    width: 10px;
+    height: 5px;
+    background-color: #BE3144;
+    margin-right: 10px;
+    border-radius: .2rem;
+}
