--- a/php/form.css
+++ b/php/form.css
@@ -92,3 +92,9 @@
     align-items: center;
     color: var(--color-white-on);
 }
+.Qukies{
+    cursor: pointer;
+}
+.Qukies:hover{
+    color: var(--color-text-alternative);
+}
