--- a/css/deckstop.css
+++ b/css/deckstop.css
@@ -35,6 +35,12 @@
 .header-one div p{
     font-size: .7rem;
 }
+.social-media{
+    gap: 1.5rem;
+}
+.redSocial{
+    cursor: pointer;
+}
 header{
     width: 100%;
     display: flex;
@@ -43,7 +49,6 @@ header{
     padding: 1rem .5rem;
     position: fixed;
     top: 0;
-    top: 1.5rem;
 }
 .section-about-services--container {
     grid-template-columns: repeat(4,1fr);
