--- a/css/tablets.css
+++ b/css/tablets.css
@@ -1,3 +1,14 @@
+
+.redSocial{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+.header-one div p{
+    font-size: .7rem;
+    font-family: var(--font-DM-sanz);
+    color: var(--color-white-on);
+}
 .title-section--one h1{
     font-size: 3.5rem;
     margin-block: 1.5rem;
@@ -6,7 +17,11 @@
 .title-section--one p{
     margin-inline: 5rem;
 }
+.section-one--picture img{
+    margin-top: 0rem;
 
+    /* padding-block: rem; */
+}
 /* section-two */
 
 .section-two--container .what-we-do{
